# hqxx-exam

./: .dockerignore  .gitignore  AUTH_API_FIX_REPORT.md  BATCH_OPERATIONS_GUIDE.md  DARK_MODE_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER_OPTIMIZATION.md  Dockerfile  Dockerfile.optimized-v1  Dockerfile.optimized-v2  Dockerfile.optimized-v3  Dockerfile.single-optimized  Dockerfile.single-ultra  ENHANCED_FEATURES_REPORT.md  ENHANCEMENT_PHASE1_COMPLETE.md  FINAL_FIXES_REPORT.md  FIXES_VERIFICATION.md  GLOBAL_SEARCH_GUIDE.md  PHASE2_PROGRESS_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  add_tianzige_template.py  complete_tianzige_template.py  correct_tianzige_template.py  docker-compose.optimized.yml  docker-compose.yml  template_tianzige.html  test.html  test_system_api.py  使用说明.md  富文本编辑器优化计划.md  搜索功能完善总结.md  系统优化建议.md
.codelf/: changelog.md
.github/: README.md  SETUP.md
admin/: CATEGORY_OPTIMIZATION.md  CRUD_FIXES.md  REFACTORING_GUIDE.md  SEARCH_COMPLETE_FIX.md  SEARCH_FILTER_FIX.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.js
api/: .env  .env.example  create_log_table.py  create_sample_logs.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  fix_config_table.py  optimize_database.py  pyproject.toml
api/app/: __init__.py  config.py  init_db.py  main.py
api/app/core/: cache.py
api/app/dependencies/: auth.py
api/app/middleware/: performance.py
api/app/models/: __init__.py  admin.py  base.py  category.py  grade.py  question.py  role.py  semester.py  subject.py  system_config.py  system_log.py  template.py
api/app/routers/: analytics.py  auth.py  categories.py  grades.py  public.py  questions.py  roles.py  search.py  semesters.py  subjects.py  system.py  templates.py  upload.py
api/app/schemas/: auth.py  common.py
api/app/utils/: auth.py  logger.py  permissions.py
docker/: README.md  build-optimized.sh  build.sh  start.sh  (+8 more)
(+113 files in other folders)
